--- a/xmobar.config
+++ b/xmobar.config
@@ -2,16 +2,16 @@ Config {
 
    -- appearance
      font =         "xft:Bitstream Vera Sans Mono:size=9:bold:antialias=true"
-   , bgColor =      "black"
-   , fgColor =      "#646464"
+   , bgColor =      "#404B59"
+   , fgColor =      "white"
    , position =     Top
    , border =       BottomB
-   , borderColor =  "#646464"
+   , borderColor =  "#7F6D89"
 
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | }{| %date%"
+   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% }{| %date%"
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -42,58 +42,60 @@ Config {
         Run DynNetwork     [ "--template" , "<dev>: <tx>kB/s|<rx>kB/s"
                              , "--Low"      , "1000"       -- units: B/s
                              , "--High"     , "5000"       -- units: B/s
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+                             , "--low"      , "#07DB9C"
+                             , "--normal"   , "#049CCF"
+                             , "--high"     , "#CF20E8"
                              ] 10
 
         -- cpu activity monitor
         , Run MultiCpu       [ "--template" , "CPU: <total0>%|<total1>%"
                              , "--Low"      , "50"         -- units: %
                              , "--High"     , "85"         -- units: %
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+                             , "--low"      , "#07DB9C"
+                             , "--normal"   , "#049CCF"
+                             , "--high"     , "#CF20E8"
                              ] 10
 
         -- cpu core temperature monitor
         , Run CoreTemp       [ "--template" , "CoreTemp: <core0>°C|<core1>°C"
                              , "--Low"      , "70"        -- units: °C
                              , "--High"     , "80"        -- units: °C
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+                             , "--low"      , "#07DB9C"
+                             , "--normal"   , "#049CCF"
+                             , "--high"     , "#CF20E8"
                              ] 50
 
         -- memory usage monitor
         , Run Memory         [ "--template" ,"Mem: <usedratio>%"
                              , "--Low"      , "20"        -- units: %
                              , "--High"     , "90"        -- units: %
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+                             , "--low"      , "#07DB9C"
+                             , "--normal"   , "#049CCF"
+                             , "--high"     , "#CF20E8"
                              ] 10
 
         -- battery monitor
         , Run Battery        [ "--template" , "Batt: <acstatus>"
                              , "--Low"      , "10"        -- units: %
                              , "--High"     , "80"        -- units: %
-                             , "--low"      , "darkred"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkgreen"
+                             , "--low"      , "#CF20E8"
+                             , "--normal"   , "#049CCF"
+                             , "--high"     , "#07DB9C"
 
                              , "--" -- battery specific options
                                        -- discharging status
                                        , "-o"	, "<left>% (<timeleft>)"
                                        -- AC "on" status
-                                       , "-O"	, "<fc=#dAA520>Charging</fc>"
+                                       , "-O"	, "<fc=#049CCF>Charging</fc> (<left>%)"
                                        -- charged status
-                                       , "-i"	, "<fc=#006000>Charged</fc>"
+                                       , "-i"	, "<fc=#07DB9C>Charged</fc>"
                              ] 50
+        --volume level (~/.xmonad/get-volume.sh)
+        , Run Com "/bin/bash" ["-c", "bash ~/.xmonad/get-volume.sh"]  "myvolume" 5
         --wireless connection
         , Run Wireless "wlp2s0" [ "-t", "WIFI: <essid>" ] 10
         -- time and date indicator
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
-        , Run Date           "<fc=#ABABAB>%F (%a) %T</fc>" "date" 10
+        , Run Date           "<fc=white>%F (%a) %T</fc>" "date" 10
         ]
    }
