--- a/xmobar.config
+++ b/xmobar.config
@@ -1,7 +1,7 @@
 Config {
 
    -- appearance
-     font =         "xft:Bitstream Vera Sans Mono:size=9:bold:antialias=true"
+     font =         "xft:Ubuntu Mono:size=10:bold:antialias=true"
    , bgColor =      "#404B59"
    , fgColor =      "white"
    , position =     Top
@@ -9,9 +9,9 @@ Config {
    , borderColor =  "#7F6D89"
 
    -- layout
-   , sepChar =  "%"   -- delineator between plugin names and straight text
+   , sepChar =  "%"   -- delineator between plugin names and straight text                  --%alsa:default:Master% %StdinReader%
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% }{| %date%"
+   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% |}{| %date%"
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -91,7 +91,7 @@ Config {
                                        , "-i"	, "<fc=#07DB9C>Charged</fc>"
                              ] 50
         --volume level (~/.xmonad/get-volume.sh)
-        , Run Com "/bin/bash" ["-c", "bash ~/.xmonad/get-volume.sh"]  "myvolume" 5
+        , Run Com "/bin/bash" ["-c", "bash ~/.xmonad/get-volume.sh"]  "myvolume" 10
         --wireless connection
         , Run Wireless "wlp2s0" [ "-t", "WIFI: <essid>" ] 10
         -- time and date indicator
