--- a/xmobar.config
+++ b/xmobar.config
@@ -9,9 +9,9 @@ Config {
    , borderColor =  "#7F6D89"
 
    -- layout
-   , sepChar =  "%"   -- delineator between plugin names and straight text                  --%alsa:default:Master% %StdinReader%
+   , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% |}{| %date%"
+   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% |}{ %UnsafeStdinReader% | %date%"
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -97,5 +97,6 @@ Config {
         -- time and date indicator
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
         , Run Date           "<fc=white>%F (%a) %T</fc>" "date" 10
+        , Run UnsafeStdinReader
         ]
    }
