--- a/xmobar.config
+++ b/xmobar.config
@@ -11,7 +11,7 @@ Config {
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = "%battery% | %multicpu% | %coretemp% | %memory% | %dynnetwork% | %wlp2s0wi% | %myvolume% |}{ %UnsafeStdinReader% | %date%"
+   , template = "%battery%| %multicpu%| %coretemp%| %memory%| %dynnetwork%| %wlp2s0wi%| %myvolume%|}{ %UnsafeStdinReader% | %date%"
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -48,7 +48,7 @@ Config {
                              ] 10
 
         -- cpu activity monitor
-        , Run MultiCpu       [ "--template" , "CPU: <total0>%|<total1>%"
+        , Run MultiCpu       [ "--template" , "CPU:<total0>% |<total1>%"
                              , "--Low"      , "50"         -- units: %
                              , "--High"     , "85"         -- units: %
                              , "--low"      , "#07DB9C"
@@ -57,7 +57,7 @@ Config {
                              ] 10
 
         -- cpu core temperature monitor
-        , Run CoreTemp       [ "--template" , "CoreTemp: <core0>°C|<core1>°C"
+        , Run CoreTemp       [ "--template" , "CoreTemp:<core0>°C|<core1>°C"
                              , "--Low"      , "70"        -- units: °C
                              , "--High"     , "80"        -- units: °C
                              , "--low"      , "#07DB9C"
@@ -66,7 +66,7 @@ Config {
                              ] 50
 
         -- memory usage monitor
-        , Run Memory         [ "--template" ,"Mem: <usedratio>%"
+        , Run Memory         [ "--template" ,"Mem:<usedratio>%"
                              , "--Low"      , "20"        -- units: %
                              , "--High"     , "90"        -- units: %
                              , "--low"      , "#07DB9C"
@@ -75,7 +75,7 @@ Config {
                              ] 10
 
         -- battery monitor
-        , Run Battery        [ "--template" , "Batt: <acstatus>"
+        , Run Battery        [ "--template" , "Bat:<acstatus>"
                              , "--Low"      , "10"        -- units: %
                              , "--High"     , "80"        -- units: %
                              , "--low"      , "#CF20E8"
@@ -93,10 +93,10 @@ Config {
         --volume level (~/.xmonad/get-volume.sh)
         , Run Com "/bin/bash" ["-c", "bash ~/.xmonad/get-volume.sh"]  "myvolume" 10
         --wireless connection
-        , Run Wireless "wlp2s0" [ "-t", "WIFI: <essid>" ] 10
+        , Run Wireless "wlp2s0" [ "-t", "WIFI:<essid>" ] 10
         -- time and date indicator
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
-        , Run Date           "<fc=white>%F (%a) %T</fc>" "date" 10
+        , Run Date           "<fc=white>%F(%a) %T</fc>" "date" 10
         , Run UnsafeStdinReader
         ]
    }
